# pystxmcontrol

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
config/: daqConfig.json  main.json  meta.json  motor.json  motorConfig.json  scans.json  xeryon_default.txt
docs/: ARCHITECTURE.md  PLOTTING_SCRIPTS_README.md  SCAN_ARCHITECTURE.md
docs/source/: conf.py  motor.md  pystxmcontrol.gui.rst  scans.md  scripting.md  scripting_link.rst
pystxmcontrol/: stxmcontrol.py
pystxmcontrol.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pystxmcontrol/controller/: client.py  controller.py  dataHandler.py  hardwareController.py  motor.py  operation_logger.py  scan.py  scripter.py  server.py  spiral.py  zmq_publisher.py
pystxmcontrol/drivers/: E712Controller.py  E712Motor.py  __init__.py  aerotechController.py  aerotechMotor.py  areaDetector.py  bcsController.py  bcsMotor.py  derivedEnergy.py  derivedEnergy_SGM.py  derivedPiezo.py  derivedPiezoWithStepper.py  derivedSlitPosition.py  derivedSlitWidth.py  epicsController.py  epicsMotor.py  fccd.py  fccd_control.py  inclinedDerivedPiezo.py  keysight53230A.py  keysightA33500B.py  keysightCounter.py  mclController.py  mclMotor.py  mcsController.py  mcsMotor.py  mmcController.py  mmcMotor.py  nptController.py  nptMotor.py  shutter.py  xerController.py  xerMotor.py  xpsController.py  xpsMotor.py  xspress3.py
pystxmcontrol/gui/: MVC_README.md  app_mvc.py  bkg_mainwindow.py  bkg_mainwindow.ui  bkgwindowwidget.py  customwidget.py  energyDef.py  energyDef.ui  energyDef_UI.py  filter_mainwindow.ui  linescanreader_mainwindow.ui  linescanreaderwidget.py  mainwindow.py  mainwindow.ui  mainwindow_UI.py  mainwindow_mvc.py  pca_mainwindow.ui  regionDef.ui  regionDef_UI.py  register_mainwindow.py  register_mainwindow.ui  registerwindowwidget.py  stack_mainwindow.ui  (+3 more)
scripts/: ExorciseXeryon.py  HDRConvertStandalone.py  KeysightTest.py  benchmark_logging.py  clientScript.py  clientTest.py  compile_ui.sh  flyScanTest.py  hyperScanTest.py  hyperScanTest2.py  hyperScanTest3.py  nPoint_flyscanTest.py  plot_commands.sh  plot_motor_moves.sh  plot_motor_positions.sh  plot_motor_with_commands.sh  scanTest.py  scripterTest.py  serverTest.py  smooth_step.py  socketTest.py  testAerotech.py  testBCS.py  testE712.py  testEPICS.py  testMCL.py  testMCS.py  testMMC.py  testShutter.py  testXPS.py  testXeryon.py  test_SGM.py  test_cleanup.py  test_logging.py  test_mvc.py  test_scan.py  test_stxm_file.py  triggerTest.py  xrfImageTest.py  xrfTest.py  (+2 more)
(+36 files in other folders)
